--- a/article-creation.html
+++ b/article-creation.html
@@ -100,6 +100,8 @@
       display: flex !important;
       justify-content: center !important;
       padding: 8px 20px !important;
+      /* Add space between the toolbar and the header/title below */
+      margin-bottom: 16px !important;
     }
     
     .article-editor__toolbar-left,
