style: force top margin on header to guarantee space above 'New article' regardless of toolbar state

--- a/article-creation.html
+++ b/article-creation.html
@@ -108,12 +108,12 @@
       }
     }
 
-    /* When in editing mode, ensure the header is pushed below the toolbar */
-    .article-creator--editing .article-creator__header {
+    /* Ensure the header (with "New article") has space from anything above */
+    .article-creator__header {
       margin-top: 24px !important;
     }
     @media (min-width: 768px) {
-      .article-creator--editing .article-creator__header {
+      .article-creator__header {
         margin-top: 32px !important;
       }
     }
