--- a/article-creation.html
+++ b/article-creation.html
@@ -111,6 +111,15 @@
         margin-bottom: 32px !important;
       }
     }
+    /* On desktop, make the toolbar shrink to its content so it doesn't look stretched */
+    @media (min-width: 1024px) {
+      .article-creator__global-toolbar {
+        width: max-content !important;
+        max-width: none !important;
+        padding-left: 12px !important;
+        padding-right: 12px !important;
+      }
+    }
     /* Compact spacing between toolbar buttons */
     .article-creator__global-toolbar { gap: 8px !important; }
 
