Editing view polish: centered editor, improved title and content styles, placeholder support, reduce extra spacing; place caret at end on enter

--- a/section-suggestions.html
+++ b/section-suggestions.html
@@ -41,12 +41,28 @@
                             <input type="checkbox" class="suggestion-item__checkbox" data-fact="harvard">
                             <div class="suggestion-item__content">
                                 <div class="suggestion-item__text">Bouman joined Harvard University as a postdoctoral fellow on the Event Horizon Telescope Imaging team (2018)</div>
+                                <div class="suggestion-item__placement">
+                                    <span class="cdx-icon cdx-icon--x-small suggestion-item__placement-icon">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+                                            <path d="M8 0L6.586 1.414 12.172 7H0v2h12.172l-5.586 5.586L8 16l8-8z"/>
+                                        </svg>
+                                    </span>
+                                    <span class="suggestion-item__placement-text">Will be added to "Research and career" section, first paragraph</span>
+                                </div>
                             </div>
                         </label>
                         <label class="suggestion-item">
                             <input type="checkbox" class="suggestion-item__checkbox" data-fact="caltech">
                             <div class="suggestion-item__content">
                                 <div class="suggestion-item__text">She then joined the California Institute of Technology (Caltech) as an assistant professor in June 2019, later promoted to associate professor</div>
+                                <div class="suggestion-item__placement">
+                                    <span class="cdx-icon cdx-icon--x-small suggestion-item__placement-icon">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+                                            <path d="M8 0L6.586 1.414 12.172 7H0v2h12.172l-5.586 5.586L8 16l8-8z"/>
+                                        </svg>
+                                    </span>
+                                    <span class="suggestion-item__placement-text">Will be added to "Research and career" section, after paragraph about Caltech</span>
+                                </div>
                             </div>
                         </label>
                     </div>
@@ -61,6 +77,14 @@
                             <div class="suggestion-item__content">
                                 <div class="suggestion-item__text">Awards</div>
                                 <div class="suggestion-item__hint">Mention all awards received</div>
+                                <div class="suggestion-item__placement">
+                                    <span class="cdx-icon cdx-icon--x-small suggestion-item__placement-icon">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+                                            <path d="M2 3v2h12V3H2zm0 4v2h12V7H2zm0 4v2h12v-2H2z"/>
+                                        </svg>
+                                    </span>
+                                    <span class="suggestion-item__placement-text">Will be positioned after "Recognition" section</span>
+                                </div>
                             </div>
                         </div>
                         <div class="suggestion-item suggestion-item--section" data-section="works">
@@ -68,6 +92,14 @@
                             <div class="suggestion-item__content">
                                 <div class="suggestion-item__text">Notable Works</div>
                                 <div class="suggestion-item__hint">Highlight significant works listed on Wikidata</div>
+                                <div class="suggestion-item__placement">
+                                    <span class="cdx-icon cdx-icon--x-small suggestion-item__placement-icon">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+                                            <path d="M2 3v2h12V3H2zm0 4v2h12V7H2zm0 4v2h12v-2H2z"/>
+                                        </svg>
+                                    </span>
+                                    <span class="suggestion-item__placement-text">Will be positioned after "Research and career" section</span>
+                                </div>
                             </div>
                         </div>
                         <div class="suggestion-item suggestion-item--section" data-section="education">
@@ -75,6 +107,14 @@
                             <div class="suggestion-item__content">
                                 <div class="suggestion-item__text">Education</div>
                                 <div class="suggestion-item__hint">Academic background and degrees</div>
+                                <div class="suggestion-item__placement">
+                                    <span class="cdx-icon cdx-icon--x-small suggestion-item__placement-icon">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+                                            <path d="M2 3v2h12V3H2zm0 4v2h12V7H2zm0 4v2h12v-2H2z"/>
+                                        </svg>
+                                    </span>
+                                    <span class="suggestion-item__placement-text">Will enhance "Early life and education" section</span>
+                                </div>
                             </div>
                         </div>
                         <div class="suggestion-item suggestion-item--section" data-section="personal">
@@ -82,6 +122,14 @@
                             <div class="suggestion-item__content">
                                 <div class="suggestion-item__text">Personal life</div>
                                 <div class="suggestion-item__hint">Background and personal information</div>
+                                <div class="suggestion-item__placement">
+                                    <span class="cdx-icon cdx-icon--x-small suggestion-item__placement-icon">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+                                            <path d="M2 3v2h12V3H2zm0 4v2h12V7H2zm0 4v2h12v-2H2z"/>
+                                        </svg>
+                                    </span>
+                                    <span class="suggestion-item__placement-text">Will be positioned after "Early life and education" section</span>
+                                </div>
                             </div>
                         </div>
                     </div>
