Tighter editor layout: reduce toolbar/title spacing; ensure caret on body placeholder only and keep content truly empty for ghost placeholder; chips closer to text

--- a/article-creation.html
+++ b/article-creation.html
@@ -115,9 +115,7 @@
       display: flex !important;
     }
     @media (min-width: 768px) {
-      .article-creator__global-toolbar {
-        margin-bottom: 12px !important;
-      }
+      .article-creator__global-toolbar { margin-bottom: 8px !important; }
     }
     /* Ensure toolbar remains usable on narrow screens */
     .article-creator__global-toolbar {
@@ -165,7 +163,7 @@
     }
     
     /* Direct targeting approaches for toolbar spacing */
-    #editingSection { padding-top: 12px !important; }
+    #editingSection { padding-top: 6px !important; }
     
     #articleContent {
       margin-top: 40px !important;
@@ -174,7 +172,7 @@
     .article-editor__content { padding-top: 12px !important; }
     /* Editing view polish */
     .article-editor { max-width: 800px; margin: 0 auto; }
-    .article-editor__title { font-size: 24px; font-weight: 600; margin: 8px 0 8px 0; }
+    .article-editor__title { font-size: 24px; font-weight: 600; margin: 4px 0 4px 0; }
     .article-editor__title-text[contenteditable="true"][data-placeholder]:empty:before {
       content: attr(data-placeholder);
       color: var(--color-disabled, #a2a9b1);
@@ -196,7 +194,7 @@
       pointer-events: none;
     }
     .article-lead { margin-bottom: 8px; color: var(--color-base, #202122); }
-    .article-editor__chips { margin-top: 6px; display: flex; gap: 8px; }
+    .article-editor__chips { margin-top: 4px; display: flex; gap: 8px; }
   </style>
   
   <script>
