--- a/section-creation.html
+++ b/section-creation.html
@@ -272,81 +272,48 @@
     </div>
 
     <script>
-        // Article data for different subjects
+        // Article data for different subjects with Wikipedia titles
         const articleData = {
             'katie-bouman': {
                 title: 'Katie Bouman',
                 description: 'American computer scientist and engineer',
-                content: `Katie Bouman is an American computer scientist and engineer. She is known for her work on the Event Horizon Telescope project, particularly for developing algorithms for imaging black holes.
-
-== Early life and education ==
-Katie Bouman earned her Ph.D. in electrical engineering and computer science from MIT in 2017.
-
-== Research and career ==
-After earning her doctorate, Bouman joined Harvard University as a postdoctoral fellow on the Event Horizon Telescope Imaging team. She led the development of an algorithm for imaging black holes, known as Continuous High-resolution Image Reconstruction using Patch priors (CHIRP).
-
-== Recognition ==
-Bouman received significant media attention after a photo showing her reaction to the detection of the black hole shadow in the EHT images went viral.`
+                wikipediaTitle: 'Katie Bouman'
             },
             'john-langford': {
-                title: 'John Langford (computer scientist)', 
+                title: 'John Langford', 
                 description: 'American machine learning researcher',
-                content: `John Langford (born January 2, 1975) is a computer scientist working in machine learning and learning theory, a field that he says, "is shifting from an academic discipline to an industrial tool".
-
-He is well known for work on the Isomap embedding algorithm, CAPTCHA challenges, Cover Trees for nearest neighbor search, Contextual Bandits (which he coined) for reinforcement learning applications, and learning reductions.
-
-John is the author of the blog hunch.net and the principal developer of Vowpal Wabbit. He works at Microsoft Research New York, of which he was one of the founding members, and was previously affiliated with Yahoo! Research, Toyota Technological Institute at Chicago, and IBM's Watson Research Center. He studied Physics and Computer Science at the California Institute of Technology, earning a double bachelor's degree in 1997, and he received his Ph.D. in computer science from Carnegie Mellon University in 2002.`
+                wikipediaTitle: 'John Langford (computer scientist)'
             },
             'henri-gouraud': {
-                title: 'Henri Gouraud (computer scientist)',
+                title: 'Henri Gouraud',
                 description: 'French computer graphics pioneer',
-                content: `Henri Gouraud (born 1944) is a French computer scientist. He is the inventor of Gouraud shading used in computer graphics. He is the great-nephew of general Henri Gouraud.
-
-During 1964–1967, he studied at École Centrale Paris. He received his Ph.D. from the University of Utah College of Engineering in 1971, working with Dave Evans and Ivan Sutherland, with his dissertation titled "Computer Display of Curved Surfaces".
-
-In 1971, Gouraud made the first computer graphics geometry capture and representation of a human face in wire-frame model, and applied his shader to produce the famous human face images showing the effect of his shading, which were done using his wife Sylvie Gouraud as the model.
-
-== Original publications ==
-* H. Gouraud, "Continuous shading of curved surfaces," IEEE Transactions on Computers, C-20(6):623–629, 1971.`
+                wikipediaTitle: 'Henri Gouraud (computer scientist)'
             },
             'eduardo-caianiello': {
                 title: 'Eduardo R. Caianiello',
                 description: 'Italian theoretical physicist',
-                content: `Eduardo Renato Caianiello (June 25, 1921 – October 22, 1993) was an Italian physicist. He contributed to scientific research, especially in quantum theory and cybernetics. He was also a pioneer in the theory of neural networks. His Caianiello's equation formalized the theory of Hebbian learning.
-
-Caianiello founded and directed the Institute of Theoretical Physics of the University of Naples; the Laboratory of Cybernetics of the Consiglio Nazionale delle Ricerche at Arco Felice (Naples), the Faculty of Mathematical, Physical and Natural Sciences of the University of Salerno, the International Institute for Senior Scientific Studies (IIASS) at Vietri sul Mare (Salerno) and the School of Specialization in Cyber and Physical Sciences.
-
-The name of the Hafnian was coined by Caianiello "to mark the fruitful period of stay in Copenhagen (Hafnia in Latin)."` 
+                wikipediaTitle: 'Eduardo R. Caianiello'
             },
             'patrick-mchale': {
-                title: 'Patrick McHale (artist)',
+                title: 'Patrick McHale',
                 description: 'American animator and musician',
-                content: `Patrick Nolen McHale (born November 17, 1983) is an American animator, storyboard artist, screenwriter, director, and musician. He is well known for creating the animated television miniseries Over the Garden Wall.
-
-== Early career ==
-McHale graduated from the California Institute of the Arts in Santa Clarita in 2006 with a BFA in character animation. He began his professional career at Cartoon Network Studios in 2007, as a writer and storyboard artist on Thurop Van Orman's The Marvelous Misadventures of Flapjack.
-
-After leaving Flapjack, he joined fellow CalArts alum and Flapjack storyboard artist Pendleton Ward to help develop Ward's Adventure Time short into an animated series, Adventure Time. Once the show was picked up, McHale stayed as the show's creative director through the show's second season.
-
-== Over the Garden Wall ==
-In October 2011, he began to make the eight-minute animated short Tome of the Unknown, which was produced as part of Cartoon Network's shorts development program. The short became the basis for a ten-part miniseries Over the Garden Wall, which premiered over five consecutive nights in November 2014.
-
-McHale won a National Cartoonists Society Reuben award as the creator of Over the Garden Wall, in the category for TV Animation. The series won an Emmy Award for Best Animated Program.`
+                wikipediaTitle: 'Patrick McHale (artist)'
             }
         };
 
         function selectArticle(articleId) {
-            // Store selected article data
+            // Store selected article metadata
             const article = articleData[articleId];
             if (article) {
-                sessionStorage.setItem('selectedArticle', JSON.stringify({
+                sessionStorage.setItem('selectedArticleId', articleId);
+                sessionStorage.setItem('selectedArticleMeta', JSON.stringify({
                     id: articleId,
                     title: article.title,
                     description: article.description,
-                    content: article.content
+                    wikipediaTitle: article.wikipediaTitle
                 }));
                 
-                // Navigate to expansion interface
+                // Navigate to expansion interface - it will fetch real content via MediaWiki
                 window.location.href = './section-expansion.html';
             }
         }
