Style: improve '...More' UI with card layout, neutral background, grid for suggested sections, and polished inline menu options

--- a/section-creation.html
+++ b/section-creation.html
@@ -277,12 +277,45 @@
             'katie-bouman': {
                 title: 'Katie Bouman',
                 description: 'American computer scientist and engineer',
-                wikipediaTitle: 'Katie Bouman'
+                wikipediaTitle: 'Katie Bouman',
+                content: `'''Katherine Louise Bouman''' (born 1989) is an American [[engineer]] and [[computer scientist]] working in the field of [[computational imaging]]. She led the development of an [[algorithm]] for imaging [[black hole]]s, known as [[CHIRP (algorithm)|Continuous High-resolution Image Reconstruction using Patch priors]] (CHIRP), and was a member of the [[Event Horizon Telescope]] team that captured the first image of a black hole.
+
+The [[California Institute of Technology]], which hired Bouman as an assistant professor in June 2019, awarded her a named professorship in 2020. In 2021, asteroid [[291387 Katiebouman]] was named after her. In 2024, she became an associate professor.
+
+== Early life and education ==
+Bouman grew up in [[West Lafayette, Indiana]]. Her father, [[Charles Bouman]], is a professor of [[electrical and computer engineering]] and [[biomedical engineering]] at [[Purdue University]].
+
+As a high school student, Bouman conducted imaging research at Purdue University. She graduated from [[West Lafayette Junior-Senior High School]] in 2007.
+
+Bouman studied electrical engineering at the [[University of Michigan]] and graduated [[summa cum laude]] in 2011. She earned her master's degree in 2013 and obtained a doctoral degree in electrical engineering and [[computer science]] in 2017 from the [[Massachusetts Institute of Technology]] (MIT).
+
+At MIT, she was a member of the [[MIT Computer Science and Artificial Intelligence Laboratory]] (CSAIL). This group also worked closely with MIT's [[Haystack Observatory]] and with the [[Event Horizon Telescope]]. She was supported by a [[National Science Foundation]] Graduate Fellowship. Her master's thesis, ''Estimating Material Properties of Fabric through the Observation of Motion'', was awarded the [[Ernst Guillemin]] Award for best Master's Thesis in electrical engineering.
+
+Her Ph.D. dissertation, ''Extreme imaging via physical model inversion: seeing around corners and imaging black holes'', was supervised by [[William T. Freeman]]. Prior to receiving her doctoral degree, Bouman delivered a [[TEDx]] talk, ''How to Take a Picture of a Black Hole'', which explained algorithms that could be used to capture the first image of a black hole.
+
+== Research and career ==
+After earning her doctorate, Bouman joined [[Harvard University]] as a [[postdoctoral fellow]] on the Event Horizon Telescope Imaging team.
+
+Bouman joined Event Horizon Telescope project in 2013. She led the development of an algorithm for imaging black holes, known as [[CHIRP (algorithm)|Continuous High-resolution Image Reconstruction using Patch priors]] (CHIRP). CHIRP inspired image validation procedures used in acquiring the first image of a black hole in April 2019, and Bouman played a significant role in the project by verifying images, selecting parameters for filtering images taken by the Event Horizon Telescope, and participating in the development of a robust imaging framework that compared the results of different image reconstruction techniques. Her group is analyzing the Event Horizon Telescope's images to learn more about [[general relativity]] in a strong gravitational field.
+
+Bouman received significant media attention after a photo, showing her reaction to the detection of the black hole shadow in the EHT images, went viral. Some people in the media and on the Internet misleadingly implied that Bouman was a "lone genius" behind the image. However, Bouman herself repeatedly noted that the result came from the work of a large collaboration, showing the importance of teamwork in science. Bouman also became the target of [[online harassment]], to the extent that her colleague Andrew Chael made a statement on Twitter criticizing "awful and sexist attacks on my colleague and friend", including attempts to undermine her contributions by crediting him solely with work accomplished by the team.
+
+Bouman joined the [[California Institute of Technology]] (Caltech) as an assistant professor in June 2019, where she works on new systems for computational imaging using [[computer vision]] and [[machine learning]]. In 2024, she was promoted to associate professor of computing and mathematical sciences, electrical engineering and astronomy as well as a Rosenberg Scholar. Bouman received a named professorship at Caltech in 2020. In 2021, Bouman was awarded the [[Royal Photographic Society]] Progress Medal and Honorary Fellowship.
+
+== Recognition ==
+She was recognized as one of the [[BBC]]'s [[100 Women (BBC)#2019|100 women of 2019]]. In 2024, Bouman was awarded a [[Sloan Research Fellowship]].`
             },
             'john-langford': {
                 title: 'John Langford', 
                 description: 'American machine learning researcher',
-                wikipediaTitle: 'John Langford (computer scientist)'
+                wikipediaTitle: 'John Langford (computer scientist)',
+                content: `'''John Langford''' (born January 2, 1975) is a [[computer scientist]] working in [[machine learning]] and [[Computational learning theory|learning theory]], a field that he says, "is shifting from an academic discipline to an industrial tool".
+
+He is well known for work on the [[Isomap]] embedding algorithm, [[CAPTCHA]] challenges, [[Cover tree|Cover Trees]] for nearest neighbor search, [[Multi-armed bandit#Contextual bandit|Contextual Bandits]] (which he coined) for [[reinforcement learning]] applications, and learning reductions.
+  
+John is the author of the [[blog]] [http://www.hunch.net/ hunch.net] and the principal developer of [[Vowpal Wabbit]].  He works at [[Microsoft Research]] New York, of which he was one of the founding members, and was previously affiliated with Yahoo! Research, [[Toyota Technological Institute at Chicago]], and [[IBM]]'s Watson Research Center.  He studied [[Physics]] and [[Computer Science]] at the [[California Institute of Technology]], earning a double bachelor's degree in 1997, and he received his [[Ph.D.]] in computer science from [[Carnegie Mellon University]] in 2002.
+
+John was the program co-chair for the 2012 International Conference on Machine Learning (ICML), general chair for the 2016 ICML, and is the president of ICML from 2019 to 2021.`
             },
             'henri-gouraud': {
                 title: 'Henri Gouraud',
