--- a/article-creation.html
+++ b/article-creation.html
@@ -195,6 +195,66 @@
     }
     .article-lead { margin-bottom: 8px; color: var(--color-base, #202122); }
     .article-editor__chips { margin-top: 4px; display: flex; gap: 8px; }
+
+    /* "...More" section styling */
+    .editor-more-section {
+      margin-top: 12px;
+      padding: 12px;
+      background: var(--background-color-interactive-subtle, #f8f9fa);
+      border: 1px solid var(--border-color-subtle, #eaecf0);
+      border-radius: 8px;
+    }
+    .editor-more-subsection { margin-top: 8px; }
+    .editor-more-subsection:first-child { margin-top: 0; }
+    .editor-more-subsection__title {
+      font-size: 12px;
+      font-weight: 600;
+      color: var(--color-base20, #54595d);
+      margin: 0 0 8px 0;
+    }
+    /* Cards */
+    .editor-more-card {
+      display: block;
+      padding: 12px;
+      background: #fff;
+      border: 1px solid var(--border-color-subtle, #eaecf0);
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background-color .2s ease, border-color .2s ease, box-shadow .2s ease;
+      margin: 6px 0;
+    }
+    .editor-more-card:hover {
+      background: #ffffff;
+      border-color: var(--border-color-interactive, #c8ccd1);
+      box-shadow: 0 1px 2px rgba(0,0,0,0.04);
+    }
+    .editor-more-card__title { font-weight: 600; font-size: 14px; color: var(--color-base, #202122); }
+    .editor-more-card__subtitle { font-size: 12px; color: var(--color-base30, #72777d); margin-top: 4px; }
+    /* Grid for intelligent sections */
+    #intelligentSectionsContainer {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+      gap: 8px;
+    }
+    /* Inline menu for detail chips */
+    .detail-chip__menu {
+      background: #fff;
+      border: 1px solid var(--border-color-subtle, #eaecf0);
+      border-radius: 8px;
+      box-shadow: 0 4px 16px rgba(0,0,0,0.08);
+      padding: 6px;
+      min-width: 180px;
+    }
+    .detail-chip__menu-option {
+      font-size: 13px;
+      padding: 8px 10px;
+      border-radius: 6px;
+      cursor: pointer;
+      color: var(--color-base, #202122);
+    }
+    .detail-chip__menu-option:hover {
+      background: var(--background-color-interactive-subtle, #f8f9fa);
+    }
   </style>
   
   <script>
