--- a/article-creation.html
+++ b/article-creation.html
@@ -269,6 +269,7 @@
       background: var(--background-color-interactive-subtle, #f8f9fa);
     }
   </style>
+  <script type="module" crossorigin src="/article-creation/assets/prototype-BKE4pTt0.js"></script>
   
   <script>
     (function() {
