Prototype UX improvements: dev/prod-safe HTML, reorder suggestions (sections first), remove counter, faster apply, Wikidata prefetch + dynamic rendering; rebuild assets

--- a/section-expansion.html
+++ b/section-expansion.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="pageTitle">Katie Bouman - Wikipedia</title>
-  <script type="module" src="./assets/section-expansion-R50QQbm4.js"></script>
-  <link rel="stylesheet" href="./src/styles/codex.css">
-  <link rel="stylesheet" href="./src/styles/section-expansion.css">
+  <!-- Dev-friendly: load source TS and CSS; Vite bundles for prod -->
+  <script type="module" crossorigin src="/article-creation/assets/section-expansion-DFr0xsq_.js"></script>
+  <link rel="modulepreload" crossorigin href="/article-creation/assets/modulepreload-polyfill-B5Qt9EMX.js">
+  <link rel="modulepreload" crossorigin href="/article-creation/assets/WikidataEnhancementService-DbWP4Spv.js">
+  <link rel="stylesheet" crossorigin href="/article-creation/assets/codex-BxE_R6kp.css">
+  <link rel="stylesheet" crossorigin href="/article-creation/assets/section-expansion-Qg1vSYNK.css">
 </head>
 <body>
     <div class="article-expansion">
@@ -39,7 +42,6 @@
             <button class="smart-widget__trigger" id="smartWidgetTrigger" onclick="window.location.href='./section-suggestions.html'">
                 <span class="smart-widget__icon">💡</span>
                 <span class="smart-widget__text">What to improve?</span>
-                <span class="smart-widget__badge" id="suggestionCount">6 ideas</span>
             </button>
         </div>
     </div>
