--- a/next/31960e8/index.html
+++ b/next/31960e8/index.html
@@ -61,11 +61,11 @@
         <h1>Prototypes</h1>
         
         <a href="./article-creation.html?fresh=1" class="prototype-link">
-            Article Creation Prototype
+            Article Creation Concepts
         </a>
         
         <a href="./section-creation.html" class="prototype-link">
-            Section Creation Prototype
+            Section Expansion Concepts
         </a>
     </div>
 </body>
